<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".EncryptMessage">

    <TextView
        android:id="@+id/text_info_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_info_message"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_show_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_show_message"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switch_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_message" />

    <TextView
        android:id="@+id/text_info_enc_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_info_enc_message"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_show_enc_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_show_enc_message"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_share_cipher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_share_cipher" />
</LinearLayout>